<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0e7c8"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#59847f">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/app_icon" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/our_ocr"
                android:textColor="#ffffff"
                android:layout_marginStart="20dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@id/imageView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:background="@drawable/white_background"
            android:layout_margin="30dp"
            android:elevation="200dp"
            android:outlineAmbientShadowColor="#624c32"
            android:outlineSpotShadowColor="#624c32">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="250dp"

                android:background="#ffffff"
                android:contentDescription="@string/input_image"
                android:scaleType="fitCenter"
                android:src="@drawable/init_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp">

            <Button
                android:id="@+id/process_ocr"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.5"
                android:text="@string/perform_super_resolution"
                android:textSize="20sp" />

            <Button
                android:id="@+id/upload_image"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:text="@string/upload_image" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:fillViewport="true"
            android:background="#f7d78c">
            <TextView
                android:id="@+id/tvOCRResult"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:padding="16dp"
                android:textSize="20sp"
                android:text="@string/display_ocr"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"/>
        </ScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>